--- a/VPCodeObfuscationDemo/VPCodeObfuscationDemo/Base.lproj/Main.storyboard
+++ b/VPCodeObfuscationDemo/VPCodeObfuscationDemo/Base.lproj/Main.storyboard
@@ -18,16 +18,19 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WvG-ly-8QR">
-                                <rect key="frame" x="164" y="336" width="46" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="Button"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WvG-ly-8QR">
+                                <rect key="frame" x="156" y="318.5" width="62" height="30"/>
+                                <state key="normal" title="测试按钮"/>
                                 <connections>
                                     <action selector="clickTestButtonAction:forEvent:" destination="BYZ-38-t0r" eventType="touchUpInside" id="czz-2q-ftP"/>
                                 </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="WvG-ly-8QR" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="9al-ta-flr"/>
+                            <constraint firstItem="WvG-ly-8QR" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="HVi-BL-68B"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <connections>
